# elycast

./: .gitattributes  .gitignore  .sonarcloud.properties  AGENTS.md  App.xaml  App.xaml.cs  AudioVisualizerSurface.cs  CHANGELOG.md  Converters.cs  ElyCast TV Player.csproj  ElyCast TV Player.sln  ElySmartDiagnosticSurface.cs  ElySmartNotificationWindow.xaml  ElySmartNotificationWindow.xaml.cs  MainWindow.Catalog.cs  MainWindow.Console.cs  MainWindow.ElyColor.cs  MainWindow.ElyFlow.cs  MainWindow.ElySmart.cs  MainWindow.ElySound.cs  MainWindow.LocalMedia.cs  MainWindow.Playback.cs  MainWindow.Settings.cs  MainWindow.Upscaling.cs  MainWindow.VideoHost.cs  MainWindow.xaml  MainWindow.xaml.cs  MetadataEditorWindow.xaml  MetadataEditorWindow.xaml.cs  OnboardingWindow.xaml  OnboardingWindow.xaml.cs  README.md  VlcVideo.cs  app.manifest
.github/workflows/: build.yml  codeql.yml
Models/: BulkObservableCollection.cs  Channel.cs  MediaModels.cs  MusicGroup.cs  Profile.cs  Settings.cs
Services/: AudioVisualEngine.cs  DebugConsole.cs  ElyFlowService.cs  HardwareProbe.cs  IptvService.cs  LocalLibraryService.cs  LocalizationCatalog.cs  LocalizationService.cs  MagpieUpscalerService.cs  ProfileStore.cs  StateStore.cs  ThemeManager.cs  WindowsMediaTransportService.cs
Services/Audio/: AudioMetadataReader.cs  AudioMetadataWriter.cs  CoverArtCache.cs  ElySoundController.cs
Services/ElySmart/: BenchmarkEngine.cs  BenchmarkProfiles.cs  BenchmarkReport.cs  CapabilityDatabase.cs  HardwareDetector.cs  HealthAnalyzer.cs  NotificationEngine.cs  PerformanceHistory.cs  QualityScorer.cs  RecommendationEngine.cs  RuntimeMonitor.cs  RuntimeOptimizer.cs
Services/Video/: ElyAudioCoreInterop.cs  ElyFlowRendererInterop.cs  IVideoBackend.cs  (+12 more)
native/ElyFlow.Native/: CMakeLists.txt
native/ElyFlow.Native/include/: ElyAudioCoreNative.h  ElyFlowNative.h
native/ElyFlow.Native/src/: ElyAudioCoreScene.cpp  ElyAudioCoreScene.h  ElyFlowNative.cpp  ElyFlowRenderer.cpp  NvidiaFrucAdapter.cpp  NvidiaFrucAdapter.h  NvidiaRuntimeLoader.cpp  NvidiaRuntimeLoader.h  SystemMediaTransport.cpp
scripts/: build.ps1
(+7 files in other folders)
